# metaflow

./: pyproject.toml
src/silicoflow/: api.py
src/silicoflow/libmetaflow/: __init__.py  cli.py  cmd_with_io.py  debug.py  environment.py  includefile.py  libmetaflow_config.py  libmetaflow_version.py  main_cli.py  package.py  pylint_wrapper.py  runtime.py  sidecar.py  sidecar_worker.py  task.py  util.py
src/silicoflow/libmetaflow/client/: core.py  filecache.py
src/silicoflow/libmetaflow/datastore/: datastore.py  local.py  s3.py
src/silicoflow/libmetaflow/datastore/util/: s3util.py
src/silicoflow/libmetaflow/datatools/: s3.py  s3op.py
src/silicoflow/libmetaflow/libmetaflow_test/: __init__.py  formatter.py  mli_check.py
src/silicoflow/libmetaflow/metadata/: local.py  metadata.py  service.py
src/silicoflow/libmetaflow/plugins/: __init__.py  catch_decorator.py  debug_monitor.py  environment_decorator.py  package_cli.py  retry_decorator.py  timeout_decorator.py
src/silicoflow/libmetaflow/plugins/conda/: batch_bootstrap.py  conda.py  conda_environment.py  conda_flow_decorator.py  conda_step_decorator.py
test/libmetaflow/: run_tests.py
test/libmetaflow/tests/: basic_artifact.py  basic_foreach.py  basic_log.py  basic_parameters.py  basic_tags.py  current_singleton.py  dynamic_parameters.py  large_artifact.py  lineage.py  merge_artifacts.py  merge_artifacts_propagation.py  nested_foreach.py  resume_end_step.py  resume_foreach_inner.py  resume_foreach_join.py  resume_foreach_split.py  resume_start_step.py  tag_catch.py  timeout_decorator.py  wide_foreach.py
(+10 files in other folders)
