[tool.poetry]
name = "silicoflow"
version = "0.1.dev0"
description = "in silico trial framework"
authors = ["Tyler Kontra <tyler@havercene.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
metaflow = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
